--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -33,8 +33,8 @@
         <activity
             android:name=".NarrowItDown"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -51,9 +51,16 @@
         <activity
             android:name=".MapsActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:label="@string/title_activity_maps"
             android:parentActivityName=".MainActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MapsActivity2"
+            android:label="@string/title_activity_maps2"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
